# nano_magnetic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  astylerc
config/: NanoConfig.h.in  nano_config.h.in
docs/: nano.uml
include/: AbstractMagneticField.h  AbstractMaterial.h  AbstractSpaceArea.h  Calculator.h  CommonMagneticField.h  CommonMaterial.h  Defs.h  Exceptions.h  MagneticField.h  Particle.h  SomeMaterial.h  Sphere.h
src/: main.cpp
src/lib/: Calculator.cpp  CommonMagneticField.cpp  CommonMaterial.cpp  MagneticField.cpp  Particle.cpp  SomeMaterial.cpp  Sphere.cpp
src/nano_magnetic/: abstract_experiment.h  abstract_space.h  chart.cc  chart.h  main.cc  material.h  model.cc  model.h  particle.cc  particle.h  result.cc  result.h  sphere.cc  sphere.h  strong_interaction_experiment.cc  strong_interaction_experiment.h  types.h  weak_interaction_experiment.cc  weak_interaction_experiment.h
src/test/: test.cc
test/: CMakeLists.txt  MaterialTest.cpp
